# js-macro

./: .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .npmignore  Cargo.toml  README.md  binding.gyp  build.rs  index.d.ts  index.ts  install.mjs  main.ts  package.json  test.js  tsconfig.json
.github/workflows/: CI.yml  lint.yml  prettier.yml
lib/: async.cpp  async.hpp  clipboard.cpp  cursor.cpp  keyboard.cpp  main.cpp  main.hpp  screenshot.cpp  screenshot.hpp  window.cpp
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: clipboard.js  clipboard.rs  clipboard.ts  constants.js  constants.ts  cursor.js  cursor.ts  index.js  index.ts  keyboard.js  keyboard.rs  keyboard.ts  lib.rs  mouse.rs  pasteFiles.js  pasteFiles.ts  screenshot.js  screenshot.ts  util.js  util.ts  window.js  window.ts  windowImpl.js  windowImpl.ts
src/hooks/: hooks.c  hooks.h  keyboard.c  keyboard.h  keyboard.rs  mod.rs  mouse.c  mouse.h  mouse.rs  sys.rs
src/screenshot/: img.rs  mod.rs  writer.rs
src/window/: collector.rs  finder.rs  mod.rs
