[package]
edition = "2021"
name = "js-macro"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = ["napi5"] }
image = { version = "0.24.2", default-features = false, features = ["png", "jpeg"] }
napi-derive = "2.5.0"

[dependencies.windows-sys]
version = "0.36.1"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
napi-build = "2.0.1"
cc = "1.0.73"

[profile.release]
lto = true
